--- a/googs.html
+++ b/googs.html
@@ -13,28 +13,31 @@
 <body>
 
     <div id="otherheader"></div>
-    <div id="my_pic">
-        <img src="img/goods_money.png">
-    </div>
-    <div class="page__bd page__bd_spacing" style="padding: 0 15px">
-        <div class="weui-flex">
-            <div class="weui-flex__item"><div class="placeholder" style="margin: 10px 0 7px 0;">世界杯1</div></div>
+    <div style="padding-bottom: 80px;">
+        <div id="my_pic">
+            <img src="img/goods_money.png">
         </div>
-        <div class="weui-flex">
-            <div class="weui-flex__item"><div class="placeholder">充值卡13123</div></div>
-            <div class="weui-flex__item"><div class="placeholder my_placeholder">
-                <span>290000</span>
-                <img  style="width: 20px" src="img/goods_money.png">
+        <div class="page__bd page__bd_spacing" style="padding: 0 15px">
+            <div class="weui-flex">
+                <div class="weui-flex__item"><div class="placeholder" style="margin: 10px 0 7px 0;">世界杯1</div></div>
+            </div>
+            <div class="weui-flex">
+                <div class="weui-flex__item"><div class="placeholder">充值卡13123</div></div>
+                <div class="weui-flex__item"><div class="placeholder my_placeholder">
+                    <span>290000</span>
+                    <img  style="width: 20px" src="img/goods_money.png">
+                </div>
+            </div>
+            </div>
+            <div class="weui-flex my_flex_border" style="position: relative;">
+                <div class="weui-flex__item"><div class="placeholder my_placeholder_money">(价值 ￥300)</div></div>
             </div>
         </div>
-        </div>
-        <div class="weui-flex my_flex_border" style="position: relative;">
-            <div class="weui-flex__item"><div class="placeholder my_placeholder_money">(价值 ￥300)</div></div>
-        </div>
-    </div>
-    <div class="weui-cells__title" style="color: #666">兑换说明：</div>
-    <div id="goods_content">
-            gitHub是一个面向开源及私有软件项目的托管平台，因为只支持git 作为唯一的版本库格式进行托管，故名gitHub。gitHub于2008年4月10日正式上线，除了git代码仓库托管及基本的 Web管理界面以外，还提供了订阅、讨论组、文本渲染、在线文件编辑...
+        <div class="weui-cells__title" style="color: #888">兑换说明：</div>
+        <div class="goods_content">
+             <p>1:gitHub是一个面向开源及私有软件项目的托管平台，因为只支持git 作为唯一的版本库格式进行托管，故名gitHub。gitHub于2008年4月10日正式上线，除了git代码仓库托管及基本的 Web管理界面以外，还提供了订阅、讨论组、文本渲染、在线文件编辑...</p>
+             <p>2:gitHub是一个面向开源及私有软件项目的托管平台，因为只支持git 作为唯一的版本库格式进行托管，故名gitHub。gitHub于2008年4月10日正式上线，除了git代码仓库托管及基本的 Web管理界面以外，还提供了订阅、讨论组、文本渲染、在线文件编辑...</p>
+            </div> 
         <div class="line"></div>
      </div>
     <div id="footer"></div>
