--- a/googs.html
+++ b/googs.html
@@ -40,7 +40,7 @@
             </div> 
         <div class="line"></div>
      </div>
-    <div id="footer"></div>
+    <div id="footer">立即兑换</div>
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
@@ -51,5 +51,4 @@
 <script src="lib/namespace.js"></script><!--namespace 全局匿名空间封装  -->
 <script src="lib/utlis.js"></script><!--untils 公共函数封装，包括验证方法 -->
 <script src="component/header/otherheader.js"></script>
-<script src="component/footer/footer.js"></script>
 <script src="js/goods.js"></script>
