--- a/googs.html
+++ b/googs.html
@@ -24,7 +24,7 @@
             <div class="weui-flex">
                 <div class="weui-flex__item"><div class="placeholder">充值卡13123</div></div>
                 <div class="weui-flex__item"><div class="placeholder my_placeholder">
-                    <span>290000</span>
+                    <strong>290000</strong>
                     <img  style="width: 20px" src="img/goods_money.png">
                 </div>
             </div>
