--- a/googslist.html
+++ b/googslist.html
@@ -7,93 +7,29 @@
     <title>世界杯</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="third/weiui/weui.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="third/swiper/swiper.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/common.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/mall.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/goodslist.css" />
 </head>
 <body>
-    <div id="mallheader">
-        <div id="otherheader">
-            <div class="otherheader_left"  onclick="goBackClick()"><img src="img/left.png" style="width:11px"></div>
-            <div class="otherheader_text"><span>商城</span></div>
-            <div>
-                <div class="weui-cell" style="background: #fff;position: relative;">
-                    <div class="weui-cell__hd" style="position: relative;margin-right: 10px;">
-                        <img src="img/user_img1.png" style="width: 45px;display: block">
-                    </div>
-                    <div class="weui-cell__bd">
-                        <p>天下足球</p>
-                        <p style="font-size: 13px;color: #888888;position: relative;text-indent: 12px;">
-                            <img src="img/goods_money.png" style="width: 20px;display: block;position: absolute">
-                            <span style="display: inline-block;">12123</span>
-                        </p>
-                    </div>
-                    <div class="my_well_right">
-                        <a style="width: 100%;height:100%;display: inline-block;color: #fff;" href="order.html">兑换记录</a>
-                    </div>
-                </div> 
-            </div>
-        </div> 
-    </div>
-    <div class="myswiper">
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div>
-                            <img src="img/nav1.png" alt="First slide" style="width: 100%;">
-                            <div class="my_swiper_bg"></div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div>
-                            <img src="img/nav1.png" alt="First slide" style="width: 100%;">
-                            <div class="my_swiper_bg"></div>
-                        </div>                            
-                    </div>
-                    <div class="swiper-slide">
-                        <div>
-                            <img src="img/nav1.png" alt="First slide" style="width: 100%;">
-                            <div class="my_swiper_bg"></div>
-                        </div>                            
-                    </div>
-                    <div class="swiper-slide">
-                        <div>
-                            <img src="img/nav1.png" alt="First slide" style="width: 100%;">
-                            <div class="my_swiper_bg"></div>
-                        </div>                            
-                    </div>
-                </div>
-                <!-- <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div> -->
-                <div class="swiper-pagination" style="text-align:center;"></div>
+    <div id="otherheader"></div>
+    <div class="weui-flex my_weui_flex">
+        <div class="my_lien"></div>
+        <div class="weui-flex__item">
+            <div class="placeholder" style="position: relative;" id="placeholder_left">
+                <span style="display: inline-block;">兑换价格</span>
+                <img src="img/top.png"  style="width: 20px;display:inline-block;position: absolute;top:20px">
+                <img src="img/none_chose.png" style="width: 20px;display: none;position: absolute;top:20px;">
+                <img src="img/bottom.png" style="width: 20px;display: none;position: absolute;top:20px;">
             </div>
         </div>
-    <div id="quiz_nav" >
-        <div class="slide-box">
-                <div class="slide-item">
-                    <div><img src="img/user_img1.png" style="width: 40px"></div>
-                    <div>世界杯1</div>
-                </div> 
-                <div class="slide-item">
-                    <div><img src="img/user_img1.png" style="width: 40px"></div>
-                    <div>世界杯2</div>
-                </div>
-                <div class="slide-item">
-                    <div><img src="img/user_img1.png" style="width: 40px"></div>
-                    <div>世界杯3</div>
-                </div>                
-                <div class="slide-item">
-                    <div><img src="img/user_img1.png" style="width: 40px"></div>
-                    <div>世界杯4</div>
-                </div>
-                <div class="slide-item">
-                    <div><img src="img/user_img1.png" style="width: 40px"></div>
-                    <div>世界杯5</div>
-                </div>                
+        <div class="weui-flex__item">
+            <div class="placeholder" style="position: relative;" id="placeholder_right">
+                <span style="display: inline-block;">剩余数量</span>
+                <img src="img/none_chose.png" style="width: 20px;display: inline-block;position: absolute;top:20px"> 
+                <img src="img/top.png"  style="width: 20px;display:none;position: absolute;top:20px">
+                <img src="img/bottom.png" style="width: 20px;display: none;position: absolute;top:20px;">              
+            </div>
         </div>
-    </div>
-    <div id="recommended">
-        —— 推荐商品 ——
     </div>
     <div class="weui-grids" style="background: #fff;padding-bottom: 80px;">
         <a href="googs.html" class="weui-grid" style="width: 50%;padding:0;font-size: 13px;padding: 3px 0 3px 15px;">
@@ -164,24 +100,19 @@
             <div class="goods_img">
                 <img style="width:90px;height: 50px;" src="img/zuilogo.png"/>
             </div>
-        </a>         
-
-
+        </a>  
     </div>
     <div class="weui-loadmore" id="load">
         <i class="weui-loading"></i>
         <span class="weui-loadmore__tips">正在加载</span>
     </div>
-    <div id="footer"></div>
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
 <script src="third/jquery/jquery.min.js"></script>
-<script src="third/swiper/swiper.min.js"></script>
-<script src="component/footer/footer.js"></script>
-
 
 <!-- base lib-基础库 end-->
 <script src="lib/namespace.js"></script><!--namespace 全局匿名空间封装  -->
 <script src="lib/utlis.js"></script><!--untils 公共函数封装，包括验证方法 -->
-<script src="js/mall.js"></script>
+<script src="component/header/otherheader.js"></script>
+<script src="js/goodslist.js"></script>
