--- a/order.html
+++ b/order.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充值卡100</span><span style="display: inline-block;float:right;">￥1000000</span>
+                            <span>中国移动1008卡</span><span style="display: inline-block;float:right;">￥10000</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
@@ -67,7 +67,7 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充值卡100</span><span style="display: inline-block;float:right;">￥1000000</span>
+                            <span>中国移动1086充值卡</span><span style="display: inline-block;float:right;">￥1000</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充值卡100</span><span style="display: inline-block;float:right;">￥1000000</span>
+                            <span>中国移动10086充</span><span style="display: inline-block;float:right;">￥100</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充值卡100</span><span style="display: inline-block;float:right;">￥1000000</span>
+                            <span>中国移动10086充值卡</span><span style="display: inline-block;float:right;">￥1000</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充值卡100</span><span style="display: inline-block;float:right;">￥1000000</span>
+                            <span>中国移动1008</span><span style="display: inline-block;float:right;">￥100</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
@@ -187,7 +187,7 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充值卡100</span><span style="display: inline-block;float:right;">￥1000000</span>
+                            <span>中国移动10086充值卡</span><span style="display: inline-block;float:right;">￥1000</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
