--- a/mall.html
+++ b/mall.html
@@ -71,24 +71,34 @@
     <div id="quiz_nav" >
         <div class="slide-box">
                 <div class="slide-item">
-                    <div><img src="img/user_img1.png" style="width: 40px"></div>
-                    <div>世界杯1</div>
+                    <a href="googslist.html">
+                        <div><img src="img/user_img1.png" style="width: 40px"></div>
+                        <div>世界杯1</div>
+                    </a>
                 </div> 
                 <div class="slide-item">
-                    <div><img src="img/user_img1.png" style="width: 40px"></div>
-                    <div>世界杯2</div>
+                    <a href="googslist.html">
+                        <div><img src="img/user_img1.png" style="width: 40px"></div>
+                        <div>世界杯2</div>
+                   </a> 
                 </div>
                 <div class="slide-item">
+                    <a href="googslist.html">
                     <div><img src="img/user_img1.png" style="width: 40px"></div>
                     <div>世界杯3</div>
+                    </a>
                 </div>                
                 <div class="slide-item">
+                    <a href="googslist.html">
                     <div><img src="img/user_img1.png" style="width: 40px"></div>
                     <div>世界杯4</div>
+                    </a>
                 </div>
                 <div class="slide-item">
+                    <a href="googslist.html">
                     <div><img src="img/user_img1.png" style="width: 40px"></div>
                     <div>世界杯5</div>
+                    </a>
                 </div>                
         </div>
     </div>
