--- a/order.html
+++ b/order.html
@@ -39,14 +39,14 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动1008卡</span><span style="display: inline-block;float:right;">￥10000</span>
+                            <span>中国移动1008卡</span><span style="display: inline-block;float:right;">积分10000</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
                 </a>
             </div>
             <div class="weui-panel__hd" style="padding: 0;margin: 0"></div>
-            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">￥1000000</span></div>
+            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">积分000000</span></div>
         </div>
 
         <div class="weui-panel weui-panel_access" style="clear: both;">
@@ -67,14 +67,14 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动1086充值卡</span><span style="display: inline-block;float:right;">￥1000</span>
+                            <span>中国移动1086充值卡</span><span style="display: inline-block;float:right;">积分1000</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
                 </a>
             </div>
             <div class="weui-panel__hd" style="padding: 0;margin: 0"></div>
-            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">￥1000000</span></div>
+            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">积分00000</span></div>
         </div> 
 
         <div class="weui-panel weui-panel_access" style="clear: both;">
@@ -95,14 +95,14 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充</span><span style="display: inline-block;float:right;">￥100</span>
+                            <span>中国移动10086充</span><span style="display: inline-block;float:right;">积分100</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
                 </a>
             </div>
             <div class="weui-panel__hd" style="padding: 0;margin: 0"></div>
-            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">￥1000000</span></div>
+            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">积分1000000</span></div>
         </div>        
     </div>
 
@@ -126,14 +126,14 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充值卡</span><span style="display: inline-block;float:right;">￥1000</span>
+                            <span>中国移动10086充值卡</span><span style="display: inline-block;float:right;">积分1000</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
                 </a>
             </div>
             <div class="weui-panel__hd" style="padding: 0;margin: 0"></div>
-            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">￥1000000</span></div>
+            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">积分100</span></div>
         </div>
     </div>           
 
@@ -157,14 +157,14 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动1008</span><span style="display: inline-block;float:right;">￥100</span>
+                            <span>中国移动10086充值卡</span><span style="display: inline-block;float:right;">积分100</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
                 </a>
             </div>
             <div class="weui-panel__hd" style="padding: 0;margin: 0"></div>
-            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">￥1000000</span></div>
+            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">积分10000</span></div>
         </div>
     </div>
     
@@ -187,14 +187,14 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充值卡</span><span style="display: inline-block;float:right;">￥1000</span>
+                            <span>中国移动10086充值卡</span><span style="display: inline-block;float:right;">积分1000</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
                 </a>
             </div>
             <div class="weui-panel__hd" style="padding: 0;margin: 0"></div>
-            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">￥1000000</span></div>
+            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">积分1000000</span></div>
         </div>
     </div>    
 
