--- a/orderdetails.html
+++ b/orderdetails.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充值卡100</span><span style="display: inline-block;float:right;">￥1000000</span>
+                            <span>中国移动1008</span><span style="display: inline-block;float:right;">积分1000</span>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
@@ -49,15 +49,15 @@
     <div class="orderdetails_page" style="padding: 10px 15px;">
         <div class="weui-flex">
             <div class="weui-flex__item" style="text-align: left；color: #666;"><div class="placeholder">商品小计</div></div>
-            <div class="weui-flex__item" style="text-align: right"><div class="placeholder">￥2300</div></div>
+            <div class="weui-flex__item" style="text-align: right"><div class="placeholder">积分<span style="color:#26C688">2300</span></div></div>
         </div>
         <div class="weui-flex">
             <div class="weui-flex__item" style="text-align: left"><div class="placeholder">运费</div></div>
-            <div class="weui-flex__item" style="text-align: right"><div class="placeholder">￥2300</div></div>
+            <div class="weui-flex__item" style="text-align: right"><div class="placeholder">积分<span style="color:#26C688">2300</span></div></div>
         </div>
         <div class="weui-flex">
             <div class="weui-flex__item" style="text-align: left"><div class="placeholder">实付费（含运费）</div></div>
-            <div class="weui-flex__item" style="text-align: right"><div class="placeholder">￥2300</div></div>
+            <div class="weui-flex__item" style="text-align: right"><div class="placeholder">积分<span style="color:#26C688">300</span></div></div>
         </div>                
     </div>
     <div class="orderdetails_page" style="padding-bottom:0;height: 58px;">
