--- a/order.html
+++ b/order.html
@@ -25,7 +25,7 @@
             <div class="weui-panel__ft">
                     <a href="orderdetails.html" class="weui-cell weui-cell_access weui-cell_link">
                         <div class="weui-cell__bd">
-                            <span style="color: #888">订单号：26C68826C68826C688</span>
+                            <span style="color: #888">兑换编号：26C68826C68826C688</span>
                             <span style="color: #26C688;display: inline-block;float: right;">待发货</span>
                         </div>
                         <span class="weui-cell__ft"></span>
@@ -53,7 +53,7 @@
             <div class="weui-panel__ft">
                     <a href="orderdetails.html" class="weui-cell weui-cell_access weui-cell_link">
                         <div class="weui-cell__bd">
-                            <span style="color: #888">订单号：26C68826C68826C688</span>
+                            <span style="color: #888">兑换编号：26C68826C68826C688</span>
                             <span style="color: #26C688;display: inline-block;float: right;">待收货</span>
                         </div>
                         <span class="weui-cell__ft"></span>
@@ -81,7 +81,7 @@
             <div class="weui-panel__ft">
                     <a href="orderdetails.html" class="weui-cell weui-cell_access weui-cell_link">
                         <div class="weui-cell__bd">
-                            <span style="color: #888">订单号：26C68826C68826C688</span>
+                            <span style="color: #888">兑换编号：26C68826C68826C688</span>
                             <span style="color: #26C688;display: inline-block;float: right;">已完成</span>
                         </div>
                         <span class="weui-cell__ft"></span>
@@ -112,7 +112,7 @@
             <div class="weui-panel__ft">
                     <a href="orderdetails.html" class="weui-cell weui-cell_access weui-cell_link">
                         <div class="weui-cell__bd">
-                            <span style="color: #888">订单号：26C68826C68826C688</span>
+                            <span style="color: #888">兑换编号：26C68826C68826C688</span>
                             <span style="color: #26C688;display: inline-block;float: right;">待发货</span>
                         </div>
                         <span class="weui-cell__ft"></span>
@@ -143,7 +143,7 @@
             <div class="weui-panel__ft">
                     <a href="###" class="weui-cell weui-cell_access weui-cell_link">
                         <div class="weui-cell__bd">
-                            <span style="color: #888">订单号：26C68826C68826C688</span>
+                            <span style="color: #888">兑换编号：26C68826C68826C688</span>
                             <span style="color: #26C688;display: inline-block;float: right;">待收货</span>
                         </div>
                         <span class="weui-cell__ft"></span>
@@ -173,7 +173,7 @@
             <div class="weui-panel__ft">
                     <a href="orderdetails.html" class="weui-cell weui-cell_access weui-cell_link">
                         <div class="weui-cell__bd">
-                            <span style="color: #888">订单号：26C68826C68826C688</span>
+                            <span style="color: #888">兑换编号：26C68826C68826C688</span>
                             <span style="color: #26C688;display: inline-block;float: right;">已完成</span>
                         </div>
                         <span class="weui-cell__ft"></span>
