--- a/order.html
+++ b/order.html
@@ -46,7 +46,7 @@
                 </a>
             </div>
             <div class="weui-panel__hd" style="padding: 0;margin: 0"></div>
-            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">积分000000</span></div>
+            <div class="weui-panel__hd" style="text-align: right;">共1个商品 实付<span style="color: #26C688">积分000000</span></div>
         </div>
 
         <div class="weui-panel weui-panel_access" style="clear: both;">
@@ -74,7 +74,7 @@
                 </a>
             </div>
             <div class="weui-panel__hd" style="padding: 0;margin: 0"></div>
-            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">积分00000</span></div>
+            <div class="weui-panel__hd" style="text-align: right;">共1个商品 实付<span style="color: #26C688">积分00000</span></div>
         </div> 
 
         <div class="weui-panel weui-panel_access" style="clear: both;">
@@ -102,7 +102,7 @@
                 </a>
             </div>
             <div class="weui-panel__hd" style="padding: 0;margin: 0"></div>
-            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">积分1000000</span></div>
+            <div class="weui-panel__hd" style="text-align: right;">共1个商品 实付<span style="color: #26C688">积分1000000</span></div>
         </div>        
     </div>
 
@@ -133,7 +133,7 @@
                 </a>
             </div>
             <div class="weui-panel__hd" style="padding: 0;margin: 0"></div>
-            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">积分100</span></div>
+            <div class="weui-panel__hd" style="text-align: right;">共1个商品 实付<span style="color: #26C688">积分100</span></div>
         </div>
     </div>           
 
@@ -164,7 +164,7 @@
                 </a>
             </div>
             <div class="weui-panel__hd" style="padding: 0;margin: 0"></div>
-            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">积分10000</span></div>
+            <div class="weui-panel__hd" style="text-align: right;">共1个商品 实付<span style="color: #26C688">积分10000</span></div>
         </div>
     </div>
     
@@ -194,7 +194,7 @@
                 </a>
             </div>
             <div class="weui-panel__hd" style="padding: 0;margin: 0"></div>
-            <div class="weui-panel__hd" style="text-align: right;">共一个商品 实付<span style="color: #26C688">积分1000000</span></div>
+            <div class="weui-panel__hd" style="text-align: right;">共1个商品 实付<span style="color: #26C688">积分1000000</span></div>
         </div>
     </div>    
 
