--- a/orderdetails.html
+++ b/orderdetails.html
@@ -55,8 +55,8 @@
             <div class="weui-flex__item" style="text-align: left；color: #666;"><div class="placeholder">商品小计</div></div>
             <div class="weui-flex__item" style="text-align: right">
                 <div class="placeholder">
-                <div  style="position: relative;float: right;padding-left: 22px;">
-                        <img style="width: 20px;display: block;position: absolute;top:0;left: 0;" src="img/momey.png"/>
+                <div  style="position: relative;float: right;padding-left: 20px;">
+                        <img style="width: 18px;display: block;position: absolute;top:1px;left: 0;" src="img/momey.png"/>
                         <span style="color:#26C688;">230000000</span>
                 </div>
             </div>
@@ -66,8 +66,8 @@
             <div class="weui-flex__item" style="text-align: left"><div class="placeholder">运费</div></div>
             <div class="weui-flex__item" style="text-align: right">
                 <div class="placeholder" style="position: relative;">
-                <div  style="position: relative;float: right;padding-left: 22px;">
-                        <img style="width: 20px;display: block;position: absolute;top:0;left: 0;" src="img/momey.png"/>
+                <div  style="position: relative;float: right;padding-left: 20px;">
+                        <img style="width: 18px;display: block;position: absolute;top:1px;left: 0;" src="img/momey.png"/>
                         <span style="color:#26C688;">230000000</span>
                 </div>
             </div>
@@ -77,8 +77,8 @@
             <div class="weui-flex__item" style="text-align: left"><div class="placeholder">实付积分（含运费）</div></div>
             <div class="weui-flex__item" style="text-align: right">
                 <div class="placeholder" style="position: relative;">
-                <div  style="position: relative;float: right;padding-left: 22px;">
-                        <img style="width: 20px;display: block;position: absolute;top:0;left: 0;" src="img/momey.png"/>
+                <div  style="position: relative;float: right;padding-left: 20px;">
+                        <img style="width: 18px;display: block;position: absolute;top:1px;left: 0;" src="img/momey.png"/>
                         <span style="color:#26C688;">230000000</span>
                 </div>
                 </div>
