--- a/order.html
+++ b/order.html
@@ -39,8 +39,11 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动1008卡</span><span style="display: inline-block;float:right;">积分10000</span>
-                        </h5>
+                            <span>中国移动1008卡</span>
+                            <div style="float: right;position: relative;padding-left:20px ">
+                                    <span style="display: inline-block">1000</span>
+                                    <img style="width: 18px;position: absolute;top:4px;left: 0"  src="img/momey.png"/>
+                            </div>                        </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
                 </a>
@@ -67,7 +70,11 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动1086充值卡</span><span style="display: inline-block;float:right;">积分1000</span>
+                            <span>中国移动1086充值卡</span>
+                            <div style="float: right;position: relative;padding-left:20px ">
+                                    <span style="display: inline-block">1000</span>
+                                    <img style="width: 18px;position: absolute;top:4px;left: 0"  src="img/momey.png"/>
+                            </div>                            
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
@@ -95,7 +102,11 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充</span><span style="display: inline-block;float:right;">积分100</span>
+                            <span>中国移动10086充</span>
+                            <div style="float: right;position: relative;padding-left:20px ">
+                                    <span style="display: inline-block">1000</span>
+                                    <img style="width: 18px;position: absolute;top:4px;left: 0"  src="img/momey.png"/>
+                            </div>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
@@ -126,7 +137,11 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充值卡</span><span style="display: inline-block;float:right;">积分1000</span>
+                            <span>中国移动10086充值卡</span>
+                            <div style="float: right;position: relative;padding-left:20px ">
+                                    <span style="display: inline-block">1000</span>
+                                    <img style="width: 18px;position: absolute;top:4px;left: 0"  src="img/momey.png"/>
+                            </div>
                         </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
@@ -157,8 +172,11 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充值卡</span><span style="display: inline-block;float:right;">积分100</span>
-                        </h5>
+                            <span>中国移动10086充值卡</span>
+                            <div style="float: right;position: relative;padding-left:20px ">
+                                    <span style="display: inline-block">1000</span>
+                                    <img style="width: 18px;position: absolute;top:4px;left: 0"  src="img/momey.png"/>
+                            </div>                        </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
                 </a>
@@ -187,8 +205,11 @@
                     </div>
                     <div class="weui-media-box__bd">
                         <h5 class="weui-media-box__title">
-                            <span>中国移动10086充值卡</span><span style="display: inline-block;float:right;">积分1000</span>
-                        </h5>
+                            <span>中国移动10086充值卡</span>
+                            <div style="float: right;position: relative;padding-left:20px ">
+                                    <span style="display: inline-block">1000</span>
+                                    <img style="width: 18px;position: absolute;top:4px;left: 0"  src="img/momey.png"/>
+                            </div>                        </h5>
                         <p class="weui-media-box__desc" style="text-align: right">x1</p>
                     </div>
                 </a>
