--- a/orderdetails.html
+++ b/orderdetails.html
@@ -39,7 +39,7 @@
                         <h5 class="weui-media-box__title">
                             <span>中国移动1008</span>
                             <div style="float: right;position: relative;padding-left:20px ">
-                                    <span style="display: inline-block;">1000</span>
+                                    <span style="display: inline-block;color:#26C688">1000</span>
                                     <img style="width: 18px;position: absolute;top:4px;left: 0"  src="img/momey.png"/>
                             </div>
                         </h5>
