--- a/quiz.html
+++ b/quiz.html
@@ -31,7 +31,7 @@
         </div>
         <div class="fr" style="margin-right:15px;margin-top:3px">
             <div id="quiz_top_right">
-                <img src="img/momey.png">
+                <img style="width: 20px" src="img/momey.png">
                 <span>0</span>
                 <img style="width:28px" src="img/add.png">
             </div>            
