--- a/googs.html
+++ b/googs.html
@@ -40,12 +40,53 @@
             </div> 
         <div class="line"></div>
      </div>
+     <div style="display: block" id="my_page_buttom">
+        <div class="weui-mask weui-animate-fade-in"></div>
+        <div class="weui-picker weui-animate-slide-up" style="z-index: 9999999;">
+            <div class="weui-picker__bd" style="height:173px">
+            <div class="weui-picker__group">
+                <div class="weui-picker__mask" >
+                    <div class="weui-cells weui-cells_form">
+                        <div class="weui-cell">
+                            <div class="weui-cell__hd"><label class="weui-label">手机号</label></div>
+                            <div class="weui-cell__bd">
+                                <input class="weui-input" type="number" placeholder="联系电话">
+                            </div>
+                        </div>
+                        <div class="weui-cell">
+                            <div class="weui-cell__hd"><label class="weui-label">收货人</label></div>
+                            <div class="weui-cell__bd">
+                                <input class="weui-input" type="text" placeholder="请填写收货人姓名">
+                            </div>
+                        </div>
+                        <div class="weui-cell">
+                            <div class="weui-cell__hd"><label class="weui-label">收货人</label></div>
+                            <div class="weui-cell__bd">
+                                <input class="weui-input" type="text" placeholder="请填入详细地址包括省市区门牌号等">
+                            </div>
+                        </div>                                                                        
+                    </div>
+                </div>
+            </div>
+            </div>
+            <div class="weui-picker__hd" style="padding:0;margin:0;text-align:center">
+                <a onclick="cancelClick()" style="color:#888;background-color:#EEEEEE;text-align:center" href="javascript:;" data-action="cancel" class="weui-picker__action">取消</a>
+                <a  onclick="successfulClick()" style="color:#fff;background-color:#30CE81;text-align:center" href="javascript:;" data-action="select" class="weui-picker__action" id="weui-picker-confirm">确定</a>
+            </div>            
+        </div>
+        </div>
+     <div id="toast" style="display: none;">
+        <div class="weui-mask_transparent"></div>
+        <div class="weui-toast">
+            <i class="weui-icon-success-no-circle weui-icon_toast"></i>
+            <p class="weui-toast__content">兑换成功，等待收货</p>
+        </div>
+    </div>
     <div id="footer">立即兑换</div>
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
 <script src="third/jquery/jquery.min.js"></script>
-
 
 <!-- base lib-基础库 end-->
 <script src="lib/namespace.js"></script><!--namespace 全局匿名空间封装  -->
