--- a/googs.html
+++ b/googs.html
@@ -40,13 +40,14 @@
             </div> 
         <div class="line"></div>
      </div>
-     <div style="display: block" id="my_page_buttom">
+     <div style="display: none" id="my_page_buttom">
         <div class="weui-mask weui-animate-fade-in"></div>
         <div class="weui-picker weui-animate-slide-up" style="z-index: 9999999;">
-            <div class="weui-picker__bd" style="height:173px">
+            <div class="weui-picker__bd" style="height:210px">
             <div class="weui-picker__group">
                 <div class="weui-picker__mask" >
-                    <div class="weui-cells weui-cells_form">
+                    <p style="padding: 15px">添加收货地址</p>
+                    <div class="weui-cells weui-cells_form" style="margin-top: 0">
                         <div class="weui-cell">
                             <div class="weui-cell__hd"><label class="weui-label">手机号</label></div>
                             <div class="weui-cell__bd">
@@ -54,15 +55,15 @@
                             </div>
                         </div>
                         <div class="weui-cell">
-                            <div class="weui-cell__hd"><label class="weui-label">收货人</label></div>
+                            <div class="weui-cell__hd"><label class="weui-label">收货地址</label></div>
                             <div class="weui-cell__bd">
-                                <input class="weui-input" type="text" placeholder="请填写收货人姓名">
+                                <input class="weui-input" type="text" placeholder="填写收货人姓名">
                             </div>
                         </div>
                         <div class="weui-cell">
                             <div class="weui-cell__hd"><label class="weui-label">收货人</label></div>
                             <div class="weui-cell__bd">
-                                <input class="weui-input" type="text" placeholder="请填入详细地址包括省市区门牌号等">
+                                <input class="weui-input" type="text" placeholder="填入详细地址包括省市区门牌号">
                             </div>
                         </div>                                                                        
                     </div>
@@ -82,7 +83,7 @@
             <p class="weui-toast__content">兑换成功，等待收货</p>
         </div>
     </div>
-    <div id="footer">立即兑换</div>
+    <div id="footer" onclick="showshClick()">立即兑换</div>
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
