--- a/googs.html
+++ b/googs.html
@@ -43,7 +43,7 @@
      <div style="display: none" id="my_page_buttom">
         <div class="weui-mask weui-animate-fade-in"></div>
         <div class="weui-picker weui-animate-slide-up" style="z-index: 9999999;">
-            <div class="weui-picker__bd" style="height:210px">
+            <div class="weui-picker__bd" style="height:210pxs">
             <div class="weui-picker__group">
                 <div class="weui-picker__mask" >
                     <p style="padding: 15px">添加收货地址</p>
@@ -63,7 +63,7 @@
                         <div class="weui-cell">
                             <div class="weui-cell__hd"><label class="weui-label">收货人</label></div>
                             <div class="weui-cell__bd">
-                                <input class="weui-input" type="text" placeholder="填入详细地址包括省市区门牌号">
+                                <textarea class="weui-input" rows="3" style="max-width: 95%;height: 50px;" type="txt" placeholder="填入详细地址包括省市区门牌号"></textarea>
                             </div>
                         </div>                                                                        
                     </div>
