--- a/googs.html
+++ b/googs.html
@@ -40,50 +40,7 @@
             </div> 
         <div class="line"></div>
      </div>
-     <div style="display: none" id="my_page_buttom">
-        <div class="weui-mask weui-animate-fade-in"></div>
-        <div class="weui-picker weui-animate-slide-up" style="z-index: 9999999;">
-            <div class="weui-picker__bd" style="height:210pxs">
-            <div class="weui-picker__group">
-                <div class="weui-picker__mask" >
-                    <p style="padding: 15px">添加收货地址</p>
-                    <div class="weui-cells weui-cells_form" style="margin-top: 0">
-                        <div class="weui-cell">
-                            <div class="weui-cell__hd"><label class="weui-label">手机号</label></div>
-                            <div class="weui-cell__bd">
-                                <input class="weui-input" type="number" placeholder="联系电话">
-                            </div>
-                        </div>
-                        <div class="weui-cell">
-                            <div class="weui-cell__hd"><label class="weui-label">收货地址</label></div>
-                            <div class="weui-cell__bd">
-                                <input class="weui-input" type="text" placeholder="填写收货人姓名">
-                            </div>
-                        </div>
-                        <div class="weui-cell">
-                            <div class="weui-cell__hd"><label class="weui-label">收货人</label></div>
-                            <div class="weui-cell__bd">
-                                <textarea class="weui-input" rows="3" style="max-width: 95%;height: 50px;" type="txt" placeholder="填入详细地址包括省市区门牌号"></textarea>
-                            </div>
-                        </div>                                                                        
-                    </div>
-                </div>
-            </div>
-            </div>
-            <div class="weui-picker__hd" style="padding:0;margin:0;text-align:center">
-                <a onclick="cancelClick()" style="color:#888;background-color:#EEEEEE;text-align:center" href="javascript:;" data-action="cancel" class="weui-picker__action">取消</a>
-                <a  onclick="successfulClick()" style="color:#fff;background-color:#30CE81;text-align:center" href="javascript:;" data-action="select" class="weui-picker__action" id="weui-picker-confirm">确定</a>
-            </div>            
-        </div>
-        </div>
-     <div id="toast" style="display: none;">
-        <div class="weui-mask_transparent"></div>
-        <div class="weui-toast">
-            <i class="weui-icon-success-no-circle weui-icon_toast"></i>
-            <p class="weui-toast__content">兑换成功，等待收货</p>
-        </div>
-    </div>
-    <div id="footer" onclick="showshClick()">立即兑换</div>
+    <div id="footer" onclick="showshClick()"><a href="determine.html" style="display: block;width: 100%;height: 100%;color: #ffffff">立即兑换</a></div>
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
