--- a/pkstart.html
+++ b/pkstart.html
@@ -12,9 +12,15 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/pkstart.css" />
 </head>
 <body>
-    <div id="pkend_header">
-        <div id="pkend_header_left"><img src="img/left.png" onclick="goBackClick()"/></div>
-        <ul>
+    <div id="pkend_header" style="height: 100px;">
+        <div id="pkend_header_left"><img src="img/left.png" onclick="goBackClick()" /></div>
+        <div style="text-align: center;height: 50px;line-height: 55px">
+            <img src="img/guo1.png" style="width: 30px"/>
+            <span style="margin: 0 10px;">32426</span>
+            <img src="img/guo2.png" style="width: 30px"/></div>
+        <div style="text-align: center;position: absolute;width: 100%;top:40px">5 : 0</div>
+
+        <!-- <ul>
             <li class="pkend_guo"><img src="img/guo1.png"/></li>
             <li class="pkend_text">
                 <div class="pkend_results">
@@ -23,7 +29,7 @@
                 </div>
             </li>
             <li class="pkend_guo"><img src="img/guo2.png"></li>
-        </ul>
+        </ul> -->
         <div style="clear: both;"></div>
         <div id="pk_name">
             <div class="pk_name_lfet">俄国</div>
@@ -39,7 +45,7 @@
             <div class="row my_row">
                 <div class="col-xs-4">
                         <!-- bootstrap 进度条是bootstrap进度条组件，用法参考bootstrap组件-->
-                    <button class="btn btn-default" style="background: #F5F5F5;border-radius: 0px;width: 80px" type="submit" onclick="betClick('主胜')">主胜</button>
+                    <button class="btn btn-default my_but" style="background: #F5F5F5;border-radius: 0px;width: 80px" type="submit" onclick="betClick('主胜')">主胜</button>
                     <div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
