--- a/googs.html
+++ b/googs.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--HTML5 doctype-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,10 +20,10 @@
         </div>
         <div class="page__bd page__bd_spacing" style="padding: 0 15px">
             <div class="weui-flex">
-                <div class="weui-flex__item"><div class="placeholder" style="margin: 10px 0 7px 0;">世界杯1</div></div>
+                <div class="weui-flex__item"><div class="placeholder" style="margin: 10px 0 7px 0;">世界杯123</div></div>
             </div>
             <div class="weui-flex">
-                <div class="weui-flex__item"><div class="placeholder">充值卡13123</div></div>
+                <div class="weui-flex__item"><div class="placeholder">我是测试</div></div>
                 <div class="weui-flex__item"><div class="placeholder my_placeholder">
                     <strong>290000</strong>
                     <img  style="width: 20px" src="img/goods_money.png">
