--- a/googs.html
+++ b/googs.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--HTML5 doctype-->
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">    
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">   
     <title>世界杯</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="third/weiui/weui.min.css" />
@@ -23,7 +22,7 @@
                 <div class="weui-flex__item"><div class="placeholder" style="margin: 10px 0 7px 0;">世界杯123</div></div>
             </div>
             <div class="weui-flex">
-                <div class="weui-flex__item"><div class="placeholder">我是测试</div></div>
+                <div class="weui-flex__item"><div class="placeholder">我是测页面试</div></div>
                 <div class="weui-flex__item"><div class="placeholder my_placeholder">
                     <strong>290000</strong>
                     <img  style="width: 20px" src="img/goods_money.png">
