--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">    
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <title>世界杯</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="third/weiui/weui.min.css" />
@@ -22,14 +22,14 @@
                             <div>
                                 <img src="img/nav1.png" alt="First slide" style="width: 100%;">
                                 <div class="my_swiper_bg"></div>
-                                <div class="my_swiper_text">天下足球标题</div>
+                                <div class="my_swiper_text">天下足球标题1</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div>
                                 <img src="img/nav1.png" alt="First slide" style="width: 100%;">
                                 <div class="my_swiper_bg"></div>
-                                <div class="my_swiper_text">天下足球标题</div>
+                                <div class="my_swiper_text">天下足球标题1</div>
                             </div>                            
                         </div>
                         <div class="swiper-slide">
@@ -57,7 +57,7 @@
                     <img src="img/test.jpg" style="width: 80px;display: block">
                 </div>
                 <div class="weui-cell__bd">
-                    <p style="margin-bottom:10px;">天下足球天下足球天下足球天下足球天下足球天下足球</p>
+                    <p style="margin-bottom:10px;">测试缩放</p>
                     <p style="font-size: 13px;color: #888888;" class="grand">
                         <span>足球战报</span><span>评论1</span>
                     </p>
